--- a/public/css/style.css
+++ b/public/css/style.css
@@ -75,32 +75,30 @@ h2{
 /* Body */
 .main {
     display: grid;
-    grid-template-columns: 3fr;
-    grid-template-rows: 3fr;
-    place-items: center;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
 }
 
 .bgshape{
     width: 65vw;
     height: 75vh;
-    grid-area: 1/-2;
     background-color: #315AF1;
+    place-self: center;
     z-index: 0;
-}
-
-img {
-    max-width: 100%;
-    max-height: 100%;
 }
 
 .bgimg1{
     max-width: 30vw;
-    grid-area: 1/-2;
+    grid-column: 1/3;
+    grid-row: 1/3;
     z-index: 1;
+    place-self: center;
 }
 
 .nltext {
-    grid-area: 1/-2;
+    justify-self: center;
+    align-self: center;
+    place-self: center;
     z-index: 2;
 }
 
