--- a/public/css/style_contact.css
+++ b/public/css/style_contact.css
@@ -71,83 +71,6 @@ h2{
     left: 1px;
 }
 
-
-/* Body */
-.main {
-    position: relative;
-    width: auto;
-}
-
-.shape {
-    width: 50vw;
-    height: 70vh;
-    background: #315AF1;
-    position: absolute;
-    top: 10vh;
-    left: 20vw;
-    z-index: 0;
-}   
-
-.img1 {
-    width: 30vw;
-    height: auto;
-    position: absolute;
-    padding-top: 13vh;
-    padding-left: 5vw;
-    z-index: 1;
-}
-
-.img2 {
-    width: 33vw;
-    height: auto;
-    position: absolute;
-    padding-top: 5vh;
-    padding-left: 55vw;
-    z-index: 1;
-}
-
-.formMain {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 2;
-    width: fit-content;
-}
-
-.formMain input {
-    position: relative;
-    border: 0;
-    outline: none;
-    padding: 10px 20px;
-    height: auto;
-    width: 20vw;
-    min-width: 250px;
-    font-size: 15px;
-    z-index: 2;
-}
-
-.formMain button {
-    position: relative;
-    background: #ffffff;
-    border: none;
-    outline: none;
-    height: auto;
-    width: 40px;
-    cursor: pointer;
-    z-index: 2;
-}
-
-.NLText {
-    position: relative;
-    z-index: 2;
-    font-size: 4vw;
-    padding-top: 15vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
 /* Contact */
 
 .email {
@@ -165,7 +88,7 @@ h2{
     justify-content: center;
 }
 
-.formContact {
+form {
     width: 90%;
     max-width: 800px;
 }
