--- a/public/css/style_index.css
+++ b/public/css/style_index.css
@@ -26,6 +26,7 @@ h2{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 0px 50px 0px 50px;
 }
 
 .Logo {
@@ -33,7 +34,6 @@ h2{
     justify-content: center;
     max-width: 100px;
     max-height: 100px;
-    padding-left: 40%;
   }
 
 #navbar{
